Current Update  Progress 98%

--- a/index.html
+++ b/index.html
@@ -193,23 +193,31 @@
     <footer>
       <article class="article__five">
         <div class="article__five-container">
-          <h4>Get early access today</h4>
-          <!--  -->
+          <h4 class="article__five-title">Get early access today</h4>
+
           <p>
             It only takes a minute to sign up and our free starter tier is
             extremely generous. If you have any questions, our support team
             would be happy to help you.
           </p>
-          <!--  -->
+
           <div class="form__group">
-            <input type="email" class="email" id="email" />
+            <input
+              type="email"
+              class="email"
+              id="email"
+              placeholder="johnappleseed#mail.com"
+            />
             <button type="button" class="button">Get Started For Free</button>
           </div>
         </div>
       </article>
+
       <section class="footer__section">
-        <article>
-          <img src="./images/logo.svg" alt="" />
+        <article class="article__footer-links-contacts">
+          <div class="footer__logo">
+            <img src="./images/logo.svg" alt="" />
+          </div>
           <div class="footer__container-contact">
             <div class="footer__content">
               <p>
@@ -239,7 +247,7 @@
                 </ul>
               </ul>
 
-              <div>
+              <div class="footer__links">
                 <ul>
                   <li><a href="">Contact Us </a></li>
                   <li><a href="">Terms</a></li>
@@ -249,7 +257,7 @@
             </div>
 
             <div class="social__media">
-              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-facebook"></i>
               <i class="fa-brands fa-twitter"></i>
               <i class="fa-brands fa-instagram"></i>
             </div>
